# xuewen

./: .gitignore  CLAUDE.md  Cargo.toml  DEMO.md  LICENSE  README.md  build.rs  flake.nix  xuewen.example.toml
.github/workflows/: desktop-release.yml
agent-runner/: package-lock.json  package.json
agent-runner/src/: claude.mjs  codex.mjs  protocol.mjs  runner.mjs
agent-runner/test/: protocol.test.mjs
deploy/k8s/: README.md  qdrant.yaml  secret.example.yaml  secret.yaml.example  xuewen-config.yaml  xuewen.yaml
deploy/nixos/: README.md  module.nix
desktop/: .gitignore  Cargo.toml  tauri.conf.json
desktop/dist-placeholder/: index.html
desktop/icons/: icon.icns
desktop/scripts/: prepare-sidecars.sh
desktop/src/: bootstrap.rs  bundle.rs  main.rs
docs/superpowers/plans/: 2026-07-06-ingest-foundation.md  2026-07-06-resolvers-exact-id.md  2026-07-06-resolvers-grobid.md  2026-07-06-watcher-daemon.md  (+20 more)
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/scripts/: copy-pdfium-wasm.mjs
frontend/src/: App.svelte  app.css  test-setup.ts
migrations/: 0001_init.sql  0002_add_cite_key.sql  0003_add_deleted_at.sql  0004_add_settings.sql  0005_add_projects.sql  0006_add_paper_projects.sql  0007_add_search.sql  0008_add_daily.sql  0009_add_daily_summary.sql  0010_add_chat.sql  0011_add_paper_summaries.sql  0012_add_summary_failures.sql  0013_add_citations.sql  0014_add_tags.sql  0015_add_paper_starred.sql  0016_drop_project_note.sql  0017_add_agent.sql
src/: config.rs  db.rs  export.rs  hash.rs  identify.rs  import.rs  lib.rs  llm.rs  main.rs  matching.rs  models.rs  naming.rs  pdf.rs  pipeline.rs  refresh.rs  server.rs  watcher.rs
src/agent/: code.rs  mod.rs
src/chat/: context.rs  mod.rs  store.rs
src/citations/: heuristic.rs  mod.rs  store.rs
src/daily/: feed.rs  job.rs  mod.rs  scheduler.rs  score.rs  store.rs  tldr.rs
src/resolve/: arxiv.rs  crossref.rs  dblp.rs  grobid.rs  http.rs  mod.rs  unpaywall.rs
src/search/: chunker.rs  embedder.rs  fts.rs  fusion.rs  indexer.rs  mod.rs  planner.rs  query.rs  store.rs  vector.rs
src/summary/: mod.rs  service.rs  store.rs
src/translate/: deepl.rs  mod.rs
src/web/: api.rs  assets.rs  chat.rs  dto.rs  mod.rs
tests/: agent_test.rs  grobid_test.rs  pipeline_test.rs  refresh_test.rs  resolve_test.rs  search_test.rs  serve_on.rs  spawn_services.rs  watcher_test.rs  web_chat_test.rs  web_citations_test.rs  web_code_test.rs  web_daily_test.rs  web_test.rs  web_translate_test.rs
tests/common/: mod.rs
tests/fixtures/: arxiv_attention.xml  crossref_kgat.json  crossref_search_kgat.json  dblp_antifuzz.json  dblp_bert.json  dblp_kgat.json  grobid_bert.tei.xml  stub_runner.mjs  unpaywall_closed.json  unpaywall_oa.json
(+179 files in other folders)
