[package]
name = "xuewen"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "macros", "migrate"] }
uuid = { version = "1", features = ["v7"] }
sha2 = "0.10"
hex = "0.4"
regex = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = "0.4"
anyhow = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde_json = "1"
roxmltree = "0.20"
strsim = "0.11"

[dev-dependencies]
tempfile = "3"
printpdf = "0.7"
wiremock = "0.6"
