[package]
name = "xuewen"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "time", "sync", "process", "signal"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "macros", "migrate"] }
uuid = { version = "1", features = ["v7", "v5"] }
sha2 = "0.10"
hex = "0.4"
regex = "1"
percent-encoding = "2" # already transitive via reqwest/url; promoted for direct use
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = "0.4"
anyhow = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "multipart", "json", "stream"] }
futures-util = "0.3"
async-stream = "0.3"
serde_json = "1"
roxmltree = "0.20"
strsim = "0.11"
notify = "6"
unicode-normalization = "0.1"
axum = { version = "0.8", features = ["multipart"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["fs"] }
rust-embed = "8"
mime_guess = "2"
tantivy = "0.24"
async-trait = "0.1.89"

[dev-dependencies]
tempfile = "3"
printpdf = "0.7"
wiremock = "0.6"
axum-test = "17"

[workspace]
members = [".", "desktop"]
